--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "electron-packager": "^8.0.0"
   },
   "dependencies": {
+    "date": "^1.0.2",
     "electron": "^1.8.2",
+    "moment": "^2.20.1",
     "snoowrap": "^1.15.2"
   },
   "main": "main.js",
