--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "date": "^1.0.2",
     "electron": "^1.8.2",
+    "electron-json-storage": "^4.0.2",
+    "electron-storage": "^1.0.7",
+    "electron-store": "^1.3.0",
     "moment": "^2.20.1",
     "snoowrap": "^1.15.2"
   },
