--- a/release-builds/Electron tutorial app-darwin-x64/Electron tutorial app.app/Contents/Resources/app/package.json
+++ b/release-builds/Electron tutorial app-darwin-x64/Electron tutorial app.app/Contents/Resources/app/package.json
@@ -14,6 +14,7 @@
     "electron-json-storage": "^4.0.2",
     "electron-storage": "^1.0.7",
     "electron-store": "^1.3.0",
+    "menu": "^0.2.5",
     "moment": "^2.20.1",
     "snoowrap": "^1.15.2"
   },
